--- a/admin/verGeral.html
+++ b/admin/verGeral.html
@@ -464,10 +464,10 @@
                   
                   if(tipo == 0)
                   {
-                    document.getElementById("listarMenu").innerHTML += '<li><a href="./criar_user.html?idUser='+idUser+'"><i class="nc-icon nc-circle-10"></i><p>Usuários</p></a></li><li class="active"><a href="./tabela_geral.html?idUser='+idUser+'"><i class="nc-icon nc-single-02"></i><p>Geral</p></a></li><li><a href="./criar_graficos.html?idUser='+idUser+'"><i class="nc-icon nc-single-copy-04"></i><p>Gráficos</p></a></li>'
+                    document.getElementById("listarMenu").innerHTML += '<li><a href="./criar_user.html?idUser='+idUser+'"><i class="nc-icon nc-circle-10"></i><p>Usuários</p></a></li><li class="active"><a href="./tabela_geral.html?idUser='+idUser+'"><i class="nc-icon nc-single-02"></i><p>Geral</p></a></li><li><a href="./dashboard.html.html?idUser='+idUser+'"><i class="nc-icon nc-single-copy-04"></i><p>Gráficos</p></a></li>'
                   }
                   else{
-                    document.getElementById("listarMenu").innerHTML += '<li class="active"><a href="./tabela_geral.html?idUser='+idUser+'"><i class="nc-icon nc-single-02"></i><p>Geral</p></a></li><li><a href="./criar_graficos.html?idUser='+idUser+'"><i class="nc-icon nc-single-copy-04"></i><p>Gráficos</p></a></li>'
+                    document.getElementById("listarMenu").innerHTML += '<li class="active"><a href="./tabela_geral.html?idUser='+idUser+'"><i class="nc-icon nc-single-02"></i><p>Geral</p></a></li><li><a href="./dashboard.html.html?idUser='+idUser+'"><i class="nc-icon nc-single-copy-04"></i><p>Gráficos</p></a></li>'
                   }
                 }
           },
