--- a/admin/tabela_geral.html
+++ b/admin/tabela_geral.html
@@ -408,9 +408,9 @@
             for (var i = 0; i < retorno.length; i++) {
               let tipo = retorno[i].tipo;
               if (tipo == 0) { // Assuming 0 is admin type
-                document.getElementById("listarMenu").innerHTML += '<li><a href="./criar_user.html?idUser=' + idUser + '" ><i class="nc-icon nc-circle-10"></i><p>Usuários</p></a></li><li class="active"><a href="./tabela_geral.html?idUser=' + idUser + '"><i class="nc-icon nc-single-02"></i><p>Geral</p></a></li><li><a href="./criar_graficos.html?idUser=' + idUser + '"><i class="nc-icon nc-single-copy-04"></i><p>Gráficos</p></a></li>';
+                document.getElementById("listarMenu").innerHTML += '<li><a href="./criar_user.html?idUser=' + idUser + '" ><i class="nc-icon nc-circle-10"></i><p>Usuários</p></a></li><li class="active"><a href="./tabela_geral.html?idUser=' + idUser + '"><i class="nc-icon nc-single-02"></i><p>Geral</p></a></li><li><a href="./dashboard.html?idUser=' + idUser + '"><i class="nc-icon nc-single-copy-04"></i><p>Gráficos</p></a></li>';
               } else {
-                document.getElementById("listarMenu").innerHTML += '<li class="active"><a href="./tabela_geral.html?idUser=' + idUser + '"><i class="nc-icon nc-single-02"></i><p>Geral</p></a></li><li><a href="./criar_graficos.html?idUser=' + idUser + '"><i class="nc-icon nc-single-copy-04"></i><p>Gráficos</p></a></li>';
+                document.getElementById("listarMenu").innerHTML += '<li class="active"><a href="./tabela_geral.html?idUser=' + idUser + '"><i class="nc-icon nc-single-02"></i><p>Geral</p></a></li><li><a href="./dashboard.html?idUser=' + idUser + '"><i class="nc-icon nc-single-copy-04"></i><p>Gráficos</p></a></li>';
               }
             }
           },
