--- a/admin/edit_geral.html
+++ b/admin/edit_geral.html
@@ -319,7 +319,7 @@
       });
 
       var idUser = datas.idUser
-      document.getElementById('btn_voltarEditUser').innerHTML = '<a href="criar_user.html?idUser=' + idUser + '" class="btn btn-primary">Voltar</a>'
+      document.getElementById('btn_voltarEditUser').innerHTML = '<a href="tabela_geral.html?idUser=' + idUser + '" class="btn btn-primary">Voltar</a>'
     }
 
     function mudarTipoUser(idUserApagar, tipo) {
